--- a/Note.ipynb
+++ b/Note.ipynb
@@ -204,6 +204,8 @@
     "#Utilizando bitwiseOr para não carregar da imagem original os dois círculos que haviam sido eliminados\r\n",
     "img = cv2.bitwise_or(cl_circulo, bl_circulo)\r\n",
     "\r\n",
+    "plt.imshow(img)\r\n",
+    "\r\n",
     "# Pinta um círculo preto no centro de massa\r\n",
     "cv2.circle(img, coord1, 10, (0, 0, 0), thickness=cv2.FILLED)\r\n",
     "cv2.circle(img, coord2, 10, (0, 0, 0), thickness=cv2.FILLED)\r\n",
