Commit da Glória - R3!!

--- a/Note.ipynb
+++ b/Note.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "source": [
     "import cv2\r\n",
     "import numpy as np\r\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "source": [
     "# Leitura da imagem para a cv2\r\n",
     "circulo = cv2.imread(\"circulo.png\")\r\n",
@@ -29,11 +29,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1ddc19c4220>"
+       "<matplotlib.image.AxesImage at 0x23b5585aca0>"
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 18
     },
     {
      "output_type": "display_data",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "source": [
     "# # Máscara com HSV\r\n",
     "\r\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "source": [
     "mask_rgb = cv2.cvtColor(mask_hsv, cv2.COLOR_GRAY2RGB)\r\n",
     "# Cópia da máscara para ser desenhada \"por cima\"\r\n",
@@ -111,12 +111,11 @@
     "listaOrdenada = sorted(lista)\r\n",
     "#Se o menor e o segundo menor equivalerem as respectivas áreas, então guarda o contorno\r\n",
     "for c in contornos:\r\n",
-    "  area = int(cv2.contourArea(c))\r\n",
-    "  if listaOrdenada[0] == area:\r\n",
-    "    menor1 = c\r\n",
-    "  elif listaOrdenada[1] == area:\r\n",
-    "    menor2 = c\r\n",
-    "\r\n",
+    "    area = int(cv2.contourArea(c))\r\n",
+    "    if listaOrdenada[0] == area:\r\n",
+    "        menor1 = c\r\n",
+    "    elif listaOrdenada[1] == area:\r\n",
+    "        menor2 = c\r\n",
     "# Referência para thickness na drawContours: https: // stackoverflow.com/questions/19222343/filling-contours-with-opencv-python\r\n",
     "# Essa propriedade (thickness) preenche o conteúdo do contorno, pintando os menores\r\n",
     "cv2.drawContours(contornos_circulos, [menor1], -1, [0, 0, 0], thickness=cv2.FILLED)\r\n",
@@ -129,11 +128,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1ddc4618f40>"
+       "<matplotlib.image.AxesImage at 0x23b57e5cdf0>"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 20
     },
     {
      "output_type": "display_data",
@@ -152,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "#Centro de massa\r\n",
     "\r\n",
@@ -194,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "source": [
     "\r\n",
     "#Referência para uso de bitwiseNot e bitwiseOr: https://www.pyimagesearch.com/2021/01/19/opencv-bitwise-and-or-xor-and-not/\r\n",
@@ -247,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "source": [
     "imgLinha = img.copy()\r\n",
     "\r\n",
@@ -286,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "source": [
     "coord3 = (cx2, cy1)\r\n",
     "pointsList = [coord1, coord2, coord3]\r\n",
