Arrumando os arquivos e códigos para a entrega

--- a/NAC5 - R1 e R2.ipynb
+++ b/NAC5 - R1 e R2.ipynb
@@ -308,8 +308,7 @@
     "cv2.line(imgLinha, coord1, coord3, azul, 3)\r\n",
     "\r\n",
     "\r\n",
-    "imgLinha = cv2.putText(imgLinha, 'alfa = 28 graus', (cx1-150, cy1+80),\r\n",
-    "                  cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 0), 3, cv2.LINE_AA)\r\n",
+    "imgLinha = cv2.putText(imgLinha, 'alfa = 28 graus', (cx1-150, cy1+80),cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 0), 3, cv2.LINE_AA)\r\n",
     "\r\n",
     "\r\n",
     "plt.imshow(imgLinha)\r\n"
