Aplicação do template no README.me

--- a/NAC5 - R1 e R2.ipynb
+++ b/NAC5 - R1 e R2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "source": [
     "import cv2\r\n",
     "import numpy as np\r\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "source": [
     "# Leitura da imagem para a cv2\r\n",
     "circulo = cv2.imread(\"circulo.png\")\r\n",
@@ -29,11 +29,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x23b5585aca0>"
+       "<matplotlib.image.AxesImage at 0x21474b462b0>"
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 2
     },
     {
      "output_type": "display_data",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "source": [
     "# # Máscara com HSV\r\n",
     "\r\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "source": [
     "mask_rgb = cv2.cvtColor(mask_hsv, cv2.COLOR_GRAY2RGB)\r\n",
     "# Cópia da máscara para ser desenhada \"por cima\"\r\n",
@@ -128,11 +128,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x23b57e5cdf0>"
+       "<matplotlib.image.AxesImage at 0x214777c6070>"
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 4
     },
     {
      "output_type": "display_data",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "#Centro de massa\r\n",
     "\r\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "\r\n",
     "#Referência para uso de bitwiseNot e bitwiseOr: https://www.pyimagesearch.com/2021/01/19/opencv-bitwise-and-or-xor-and-not/\r\n",
@@ -223,7 +223,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1ddc406aca0>"
+       "<matplotlib.image.AxesImage at 0x21477aab970>"
       ]
      },
      "metadata": {},
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "source": [
     "imgLinha = img.copy()\r\n",
     "\r\n",
@@ -262,7 +262,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1ddc4ec7a00>"
+       "<matplotlib.image.AxesImage at 0x214777b8fd0>"
       ]
      },
      "metadata": {},
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "source": [
     "coord3 = (cx2, cy1)\r\n",
     "pointsList = [coord1, coord2, coord3]\r\n",
@@ -326,7 +326,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1ddc5798cd0>"
+       "<matplotlib.image.AxesImage at 0x21478c16130>"
       ]
      },
      "metadata": {},
