Versão de entrega para conferência da Lari

--- a/NAC5R1R2.ipynb
+++ b/NAC5R1R2.ipynb
@@ -29,7 +29,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x21474b462b0>"
+       "<matplotlib.image.AxesImage at 0x2e7455562b0>"
       ]
      },
      "metadata": {},
@@ -128,7 +128,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x214777c6070>"
+       "<matplotlib.image.AxesImage at 0x2e747c58070>"
       ]
      },
      "metadata": {},
@@ -223,7 +223,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x21477aab970>"
+       "<matplotlib.image.AxesImage at 0x2e734af3220>"
       ]
      },
      "metadata": {},
@@ -262,7 +262,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x214777b8fd0>"
+       "<matplotlib.image.AxesImage at 0x2e734af3460>"
       ]
      },
      "metadata": {},
@@ -326,7 +326,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x21478c16130>"
+       "<matplotlib.image.AxesImage at 0x2e749625100>"
       ]
      },
      "metadata": {},
